Migrate duplicated code (along with potentially useful elswhere code) to utility class & Initial (very bad) login system implementation